$Id: History,v 1.6 2001-02-28 06:20:07 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
- Feb 29, 01 H.Kurashige(decay-V03-00-03)
- Fix minor bug in G4VExtDecayer 

- Feb 22, 01 H.Kurashige(decay-V03-00-02)
- Add G4VExtDecayer and modify G4Decay 

- Jan 18, 01 H.Kurashige(decay-V03-00-01)
-  Use PreAssignedDecayTime in G4DynamicParticle if necessary

- Oct 24, 00 H.Kurashige(decay-V02-00-01)
-  Bug fix in G4Decay::DecayIt (no decay if the particle is stable)

- Oct 19, 00 H.Kurashige(decay-V02-00-00)
-  Bug fix in G4Decay to avoid direct modification of G4Track
   by the Decay Process

- Mar. 1, 00 H.Kurashige (decay-V01-00-00)
-  Bug fix in G4Decay::IsApplicable()
      G4Decay should be applicable to "shortlived" particles  