@@ -1,4 +1,4 @@
-$Id: History,v 1.6 2001-02-28 06:20:07 kurasige Exp $
+$Id: History,v 1.7 2001-08-16 07:28:09 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+-  Aug 16, 01 H.Kurashige(decay-V03-02-00)
+- Clean up codes
+
 - Feb 29, 01 H.Kurashige(decay-V03-00-03)
 - Fix minor bug in G4VExtDecayer 
 
